# CODI

./: .gitignore  Broken.java  CMakeLists.txt  PERFORMANCE_OPTIMIZATION.md  README.md  TODO_INSTANT_BOILERPLATE.md  TODO_TURBOQUANT_PERF.md  TREE.md  TURBOQUANT_INTEGRATION.md  __init__.py  agent.py  build_turboquant.py  cli.py  config.py  config_loader.py  context_trimmer.py  dispatcher.py  executor.py  improver.py  index.html  indexer.py  llm_factory.py  log_viewer.py  logger.py  main.py  mcp_client.py  mcp_manager.py  mcp_servers.json  memory.py  planner.py  prompts.py  pyproject.toml  pyvenv.cfg  quantized_embeddings.py  quick_actions.py  refiner.py  registry.py  requirements.txt  setup.cfg  setup.md  (+8 more)
chroma_db/d2b0fa8eab/: chroma.sqlite3
codi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
codi_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
coding-agent/: README.md  config.py  indexer.py  llm_factory.py  main.py  mcp_servers.json  tools.py
core/: executor.py  improver.py  planner.py  prompts.py  quick_actions.py  validation_utils.py  validator.py
local/: __init__.py  file_tools.py  search_tools.py  shell_tools.py
mcp/: __init__.py  mcp_tools.py
shubham/: simple.html  styles.css
state/: temp_db.py
test/: test_dispatcher_and_context.py  test_executor_state_regressions.py  test_import_compat.py  test_improver_next_step.py  test_llm_factory.py  test_performance_optimizations.py  test_prompt_architecture.py  test_status_stream.py  test_validator_java_compile.py  test_validator_repeated_failures.py
tools/: __init__.py
tools/local/: __init__.py  file_tools.py  search_tools.py  shell_tools.py
tools/mcp/: mcp_tools.py
turboQuant/: turboquant.hpp  turboquant_pybind.cpp
